examples/manual/failing/ImportExplicit.purs
module M1 where

  foo = "foo"

module Main where

  import M1 (X(..))
